# particles

./: Cargo.toml  README.md  config.ini  config.ron
src/: board.rs  color.rs  config.rs  main.rs  particle.rs  particle_type.rs  vec2.rs
