[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
configparser = "3.0.2"
png = "0.17.6"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf","image","gfx","mixer"]

[profile.release-lto]
inherits = "release"
lto = true
