[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = "1.0.147"
ron = "0.8.0"
png = "0.17.6"
sdl2 = { version = "0.35.2", features = ["gfx"] }

[profile.release-lto]
inherits = "release"
lto = true